# malicious-doc-lab

./: .gitignore  AGENT.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  shared_pipeline.py
demo/: Dockerfile  app.py  config.py  pipeline.py  requirements.txt
demo-chatbot/: Dockerfile  app.py  config.py  pipeline.py
demo-chatbot/static/: index.html
documents/: attacks-and-techniques.md  file-formats.md  walkthrough-demo.md  walkthrough-real-targets.md
planning/: ARCHITECTURE.md  CODE_REVIEW.md  CODE_REVIEW_1_FIXED.md  CODE_REVIEW_2_FIXED.md  CODE_REVIEW_4_FIXED.md  CODE_REVIEW_5_FIXED.md  CODE_REVIEW_6_FIXED.md  PLAN.md  TASKS.md
scripts/: multi_model_test.sh
src/maldoc/: __init__.py  cli.py  coverage.py
src/maldoc/adapters/: __init__.py  base.py  chatbot.py  demo.py  http.py
src/maldoc/attacks/: __init__.py  base.py  chunk_split.py  delayed_trigger.py  encoding_obfuscation.py  hidden_text.py  markdown_exfil.py  metadata.py  ocr_bait.py  off_page.py  retrieval_poison.py  summary_steer.py  tool_routing.py  typoglycemia.py  visual_scaling_injection.py  white_on_white.py
src/maldoc/evaluate/: evidence.py  runner.py  scoring.py
src/maldoc/generate/: __init__.py  csv_gen.py  docx.py  eml.py  html.py  image.py  payloads.py  pdf.py  pptx_gen.py  templates.py  txt_gen.py  xlsx.py
src/maldoc/report/: __init__.py  json_report.py  markdown_report.py
tests/: test_adapters.py  test_attacks.py  test_cli.py  test_coverage.py  test_demo_apps.py  test_demo_pipeline_sync.py  test_evaluate_runner.py  test_generators.py  test_reports.py  test_scoring.py
